--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "parcel",
     "build": "parcel build",
-    "build-gh": "parcel build --public-url 'https://{github-username}.github.io/{repo-name}'",
+    "build-gh": "parcel build --public-url 'https://grace2709.github.io/MLSA'",
     "predeploy": "npm run build-gh",
     "deploy": "gh-pages -d dist"
   },
